<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue_300"
    tools:context=".ui.activities.detail.movie.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <ImageView
            android:id="@+id/ivMovieDetail"
            android:layout_width="0dp"
            android:layout_height="224dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/poster_gambar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleDetail"
            app:srcCompat="@drawable/ic_baseline_image_24"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvTitleDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="monospace"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvOverviewDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="16dp"
            android:text="@string/overview"
            android:textAlignment="viewStart"
            android:textColor="#FFEE58"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDurationDetail" />

        <TextView
            android:id="@+id/tvGenreDetail"
            android:layout_width="0dp"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="16dp"
            android:lines="2"
            android:text="@string/genre"
            android:textColor="#66BB6A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOverviewDetail" />

        <TextView
            android:id="@+id/tvDurationDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="#FF7043"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivMovieDetail"
            tools:text="0h 0m" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="97dp"
            android:layout_height="85dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#FFEE58"
            android:clickable="true"
            android:contentDescription="@string/favorite_ask"
            app:backgroundTint="#EC407A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_favorite_border_24"
            android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>