<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_300"
    android:backgroundTint="#192032"
    android:orientation="vertical"
    tools:context=".ui.activities.home.HomeActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_700"
        app:tabGravity="fill"
        app:tabIndicator="@android:drawable/arrow_up_float"
        app:tabIndicatorColor="#80FFFFFF"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorGravity="bottom"
        app:tabMode="auto"
        app:tabTextColor="#0E0E0E" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>